# corelinkai-safe

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: __init__.py  nebius_preflight.py  run_business_cases.py
src/: agent.py  executor.py  server.py
src/a2a_bridge/: __init__.py  agent.py  executor.py  server.py
src/adapters/: __init__.py  pibench.py
src/llm/: __init__.py  nebius.py
src/runtime/: __init__.py  case_builder.py  core.py  flow_control.py  graph.py  models.py  policies.py  solver.py  state.py  tracing.py
tests/: conftest.py  test_business_cases.py  test_policy_runtime.py
